<resources>
    <string name="app_name">AddictNative</string>
    <string name="string_a">A</string>
    <string name="string_d">D</string>
    <string name="string_d2">D</string>
    <string name="string_i">I</string>
    <string name="string_c">C</string>
    <string name="string_t">T</string>
    <string name="btn_save">SAVE</string>
    <string name="counter_string">C :</string>
    <string name="target_string">T :</string>
    <string name="initial_counter">0</string>
    <string name="initial_target">0</string>
</resources>